[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tlscan"
version = "0.0.3"
description = "Python based TLS enumeration scanner"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE.txt" }
keywords = ["tls", "scanner", "security"]

authors = [{ name = "M.H. Jansen of Lorkeers", email = "marco@threatlabs.eu" }]

maintainers = [
  { name = "ThreatLabs", email = "info@threatlabs.eu" },
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Information Technology",
  # "Topic :: Security testing :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
"Homepage" = "https://github.com/ThreatLabsNL/TLScan"
"Bug Reports" = "https://github.com/ThreatLabsNL/TLScan/issues"
"Source" = "https://github.com/ThreatLabsNL/TLScan/"

[project.scripts]
tlscan = "tlscan:main"
